--- a/channel/staff.html
+++ b/channel/staff.html
@@ -203,162 +203,7 @@
     <!-- STAFF -->
     <section id="staff" class="bg-black/90 px-5 text-white py-12 min-h-screen flex flex-col justify-center gap-10">
         <div class="bg-black/20 p-10 container mx-auto rounded-lg shadow-lg h-full" data-aos="fade-up">
-            <!-- STAFF CATEGORY -->
-            <div>
-                <div class="text-center mb-20">
-                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Community
-                            Manager</span>
-                    </h1>
-                    <p class="text-sm">List Admin Server</p>
-                </div>
-                <div class="flex flex-wrap justify-center gap-12">
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/tame.png" alt="Admin - nsx4y"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Tame</p>
-                        <p class="text-sm sm:text-base font-light">Moderator Chat</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/phion.png" alt="Founder - Phy0n"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Phy0n</p>
-                        <p class="text-sm sm:text-base font-light">Website Developer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/luhut.png" alt="Developer - Luhut"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Luhut</p>
-                        <p class="text-sm sm:text-base font-light">Bot Developer</p>
-                    </div>
-                </div>
-            </div>
-            <!-- STAFF CATEGORY -->
-            <div>
-                <div class="text-center my-20">
-                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Division
-                            Manager</span>
-                    </h1>
-                    <p class="text-sm">List Manager Division</p>
-                </div>
-                <div class="flex flex-wrap justify-center gap-12">
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/phion.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Phy0n</p>
-                        <p class="text-sm sm:text-base font-light">Website Developer</p>
-                    </div>
-                </div>
-            </div>
-            <!-- STAFF CATEGORY -->
-            <div>
-                <div class="text-center my-20">
-                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Team
-                            Management</span>
-                    </h1>
-                    <p class="text-sm">List Staff Tetap Server</p>
-                </div>
-                <div class="flex flex-wrap justify-center gap-12">
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/lenn.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Lenn</p>
-                        <p class="text-sm sm:text-base font-light">Partner Manager</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/crystal.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Crystal</p>
-                        <p class="text-sm sm:text-base font-light">Partner Manager</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/vexzy.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Vexzy</p>
-                        <p class="text-sm sm:text-base font-light">Designer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/yura.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Yura</p>
-                        <p class="text-sm sm:text-base font-light">Designer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/ivy.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Ivy</p>
-                        <p class="text-sm sm:text-base font-light">Designer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/erza.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Erza</p>
-                        <p class="text-sm sm:text-base font-light">Moderator</p>
-                    </div>
-                </div>
-            </div>
-            <!-- STAFF CATEGORY -->
-            <div>
-                <div class="text-center my-20">
-                    <h1 class="text-xl sm:text-2xl md:text-3xl font-bold"><span class="text-yellow-500">Trainee</span>
-                    </h1>
-                    <p class="text-sm">List Trainee Server</p>
-                </div>
-                <div class="flex flex-wrap justify-center gap-12">
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/cilla.png" alt="Cilla"
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold text-white">Cilla</p>
-                        <p class="text-xs sm:text-sm font-light text-gray-300">Event Organizer</p>
-                    </div>
-
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/nopal.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Zall</p>
-                        <p class="text-sm sm:text-base font-light">Event Organizer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/vendrika.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Vendrika</p>
-                        <p class="text-sm sm:text-base font-light">Event Organizer</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/eyl.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Eyl</p>
-                        <p class="text-sm sm:text-base font-light">Host</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/lumine.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Lumine</p>
-                        <p class="text-sm sm:text-base font-light">Host</p>
-                    </div>
-                    <div
-                        class="flex flex-col items-center bg-black/50 p-5 rounded-2xl max-w-xs w-full sm:w-48 shadow-lg hover:shadow-xl transition-all duration-300">
-                        <img src="../assets/img/staff/grizzly.png" alt=""
-                            class="w-16 h-16 sm:w-20 sm:h-20 rounded-full mb-3 border-2 border-yellow-500 shadow-md">
-                        <p class="text-sm sm:text-base font-semibold">Grizzly</p>
-                        <p class="text-sm sm:text-base font-light">Host</p>
-                    </div>
-                </div>
-            </div>
+            <div id="staff-list"></div>
         </div>
     </section>
 
@@ -400,27 +245,6 @@
 
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init({
-        duration: 1200,
-    });
-
-    const staffContainer = document.querySelector('.staffBox-item');
-    const scrollLeftButton = document.getElementById('scrollLeft');
-    const scrollRightButton = document.getElementById('scrollRight');
-
-    scrollLeftButton.addEventListener('click', () => {
-        staffContainer.scrollBy({ left: -200, behavior: 'smooth' });
-    });
-
-    scrollRightButton.addEventListener('click', () => {
-        staffContainer.scrollBy({ left: 200, behavior: 'smooth' });
-    });
-
-    function toggleMenu() {
-        const menu = document.getElementById("dropdown-menu");
-        menu.classList.toggle("hidden");
-    }
-</script>
+<script src="../JS/script.js"></script>
 
 </html>
