--- a/channel/donate.html
+++ b/channel/donate.html
@@ -219,40 +219,47 @@
     </section>
 
     <!-- Footer -->
-    <section id="footer" class="bg-zinc-950 text-white py-12">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-8 md:mb-0 md:mr-8" data-aos="fade-out">
-                    <h1 class="text-xl sm:text-3xl font-bold mb-4 text-yellow-500">SMKN 5 KIEV</h1>
-                    <p class="text-sm sm:text-base leading-relaxed w-auto">
+    <footer id="footer" class="bg-zinc-950 text-white py-12">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+                <!-- Logo & Deskripsi -->
+                <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
+                    <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
+                    <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
                         We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Whether you’re looking to make new
-                        friends, share your interests, or just chill, there’s a place for everyone here. Join us, and
-                        let’s
-                        make
-                        some great memories together!
+                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        together!
                     </p>
                 </div>
-                <div class="flex flex-col items-center md:items-end">
-                    <h2 class="text-lg sm:text-xl font-semibold mb-4">Follow Us</h2>
-                    <div class="flex gap-4">
+
+                <!-- Sosial Media -->
+                <div class="flex flex-col items-center md:items-end space-y-4" data-aos="fade-out"
+                    data-aos-anchor-placement="top-bottom">
+                    <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
+                    <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-discord text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-tiktok text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-instagram text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
                 </div>
             </div>
+
+            <!-- Garis Pemisah -->
+            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+                © 2025 SMKN 5 KIEV. All Rights Reserved.
+            </div>
         </div>
-    </section>
+    </footer>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script defer src="../JS/script.js"></script>
 
