--- a/channel/leaderboard.html
+++ b/channel/leaderboard.html
@@ -92,153 +92,68 @@
     </header>
 
     <!-- Leaderboard -->
-    <section
-        class="sectionLeaderboard bg-black/90 bg-cover bg-center min-h-screen flex flex-col justify-center text-white py-32"
-        id="leaderboard">
+    <section id="leaderboard"
+        class="sectionLeaderboard bg-black/90 min-h-screen flex flex-col justify-center text-white py-32">
         <div class="leaderboardContainer container mx-auto px-4" data-aos="fade-up">
-            <div class="leaderboardBox bg-black/25 bg-opacity-75 rounded-lg shadow-lg p-7">
+            <div class="leaderboardBox bg-black/25 rounded-lg shadow-lg p-7">
                 <div class="leaderboardBox-item">
                     <div class="leaderboardBox-itemTitle text-center mb-6">
-                        <h1 class="text-xl sm:text-2xl md:text-3xl  font-bold">
+                        <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">
                             🏆 MONTHLY <span class="text-yellow-500">LEADERBOARD</span>
                         </h1>
                         <p class="text-gray-400 text-sm mt-2">Top Monthly Season SMKN 5 KIEV</p>
                     </div>
-
-                    <!-- Kontainer untuk item -->
-                    <div class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
-                        <!-- Item 1 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s1.png" alt="s1"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏆 Season #1 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 2 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s2.png" alt="s2"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥈 Season #2 | Luhut</p>
-                            </div>
-                        </div>
-                        <!-- Item 3 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s3.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🥉 Season #3 | nsx4y</p>
-                            </div>
-                        </div>
-                        <!-- Item 4 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s4.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #4 | Yura</p>
-                            </div>
-                        </div>
-                        <!-- Item 5 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s5.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #5 | Tame</p>
-                            </div>
-                        </div>
-                        <!-- Item 6 -->
-                        <div
-                            class="flex items-center gap-4 bg-zinc-800 bg-opacity-90 rounded-xl p-5 w-64 sm:w-72 shadow-lg hover:shadow-xl transition-all border-2 border-yellow-400">
-                            <div class="w-12 h-12 sm:w-14 sm:h-14">
-                                <img src="../assets/img/s6.png" alt="s3"
-                                    class="w-full h-full object-cover rounded-full border-2 border-gray-500">
-                            </div>
-                            <div>
-                                <p class="text-sm sm:text-base font-semibold text-white">🏅 Season #6 | Tame</p>
-                            </div>
-                        </div>
+                    <div id="leaderboard-list" class="leaderboardBox-itemList flex flex-wrap gap-4 justify-center">
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <section id="footer" class="bg-zinc-950 text-white py-12">
-        <div class="container mx-auto px-4">
-            <div class="flex flex-col md:flex-row justify-between items-center">
-                <div class="mb-8 md:mb-0 md:mr-8" data-aos="fade-out">
-                    <h1 class="text-xl sm:text-3xl font-bold mb-4 text-yellow-500">SMKN 5 KIEV</h1>
-                    <p class="text-sm sm:text-base leading-relaxed w-auto">
+    <footer id="footer" class="bg-zinc-950 text-white py-12">
+        <div class="container mx-auto px-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+                <!-- Logo & Deskripsi -->
+                <div class="text-center md:text-left" data-aos="fade-out" data-aos-anchor-placement="top-bottom">
+                    <img src="../assets/img/logo2.png" class="w-52 mx-auto md:mx-0">
+                    <p class="text-sm sm:text-base leading-relaxed mt-4 max-w-md mx-auto md:mx-0">
                         We created this server to have fun and build a friendly community. We’d be thrilled if you
-                        joined us, and we’re here to welcome you with open arms! Whether you’re looking to make new
-                        friends, share your interests, or just chill, there’s a place for everyone here. Join us, and
-                        let’s
-                        make
-                        some great memories together!
+                        joined us, and we’re here to welcome you with open arms! Let’s make some great memories
+                        together!
                     </p>
                 </div>
-                <div class="flex flex-col items-center md:items-end">
-                    <h2 class="text-lg sm:text-xl font-semibold mb-4">Follow Us</h2>
-                    <div class="flex gap-4">
+
+                <!-- Sosial Media -->
+                <div class="flex flex-col items-center md:items-end space-y-4" data-aos="fade-out"
+                    data-aos-anchor-placement="top-bottom">
+                    <h2 class="text-lg sm:text-xl font-semibold">Follow Us</h2>
+                    <div class="flex gap-6">
                         <a href="https://discord.gg/MwNE7Vfb6t"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-discord text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-discord text-3xl"></i>
                         </a>
                         <a href="https://www.tiktok.com/@smkn5kiev.id"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-tiktok text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-tiktok text-3xl"></i>
                         </a>
                         <a href="https://www.instagram.com/smkn5kiev.id/"
-                            class="text-yellow-500 hover:text-yellow-400 transition">
-                            <i class="fab fa-instagram text-2xl"></i>
+                            class="text-yellow-500 hover:text-yellow-400 transition transform hover:scale-110">
+                            <i class="fab fa-instagram text-3xl"></i>
                         </a>
                     </div>
                 </div>
             </div>
+
+            <!-- Garis Pemisah -->
+            <div class="border-t border-gray-800 mt-8 pt-4 text-center text-sm text-gray-400">
+                © 2025 SMKN 5 KIEV. All Rights Reserved.
+            </div>
         </div>
-    </section>
+    </footer>
 
 </body>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init({
-        duration: 1200,
-    });
-
-    const staffContainer = document.querySelector('.staffBox-item');
-    const scrollLeftButton = document.getElementById('scrollLeft');
-    const scrollRightButton = document.getElementById('scrollRight');
-
-    scrollLeftButton.addEventListener('click', () => {
-        staffContainer.scrollBy({ left: -200, behavior: 'smooth' });
-    });
-
-    scrollRightButton.addEventListener('click', () => {
-        staffContainer.scrollBy({ left: 200, behavior: 'smooth' });
-    });
-
-    function toggleMenu() {
-        const menu = document.getElementById("dropdown-menu");
-        menu.classList.toggle("hidden");
-    }
-</script>
+<script src="../JS/script.js"></script>
 
 </html>
