--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     </footer>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/script.js"></script>
+    <script src="JS/script.js"></script>
 </body>
 
 </html>
