--- a/index.html
+++ b/index.html
@@ -81,16 +81,25 @@
     </header>
 
     <!-- SECTION HOME -->
-    <section class="h-screen bg-cover bg-center bg-no-repeat flex items-center relative overflow-hidden" id="home"
-        style="background-image: url('assets/img/yuki.png');">
+    <section class="relative h-screen flex items-center overflow-hidden" id="home">
+        <!-- Background Layers -->
+        <div id="home-bg" class="absolute inset-0 bg-cover bg-center transition-opacity duration-1000"
+            style="background-image: url('assets/img/yuki.png');">
+        </div>
+        <div id="home-bg-next" class="absolute inset-0 bg-cover bg-center opacity-0 transition-opacity duration-1000">
+        </div>
+
+        <!-- Overlay -->
         <div class="absolute inset-0 bg-black/80 z-10"></div>
+
+        <!-- Content -->
         <div class="relative z-20 mx-5 sm:mx-10 lg:mx-40 text-white">
             <div class="mb-5">
-                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-yellow-500" data-aos="fade-right">SMKN
-                    5
-                    KIEV</h3>
-                <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">BEST
-                    <span class="text-yellow-500">INDONESIA</span> DISCORD SERVER
+                <h3 class="text-xl sm:text-2xl font-semibold tracking-wide text-yellow-500" data-aos="fade-right">
+                    SMKN 5 KIEV
+                </h3>
+                <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider mb-4" data-aos="fade-right">
+                    BEST <span class="text-yellow-500">INDONESIA</span> DISCORD SERVER
                 </h1>
                 <p class="text-sm sm:text-lg lg:text-xl leading-relaxed lg:w-3/5" data-aos="fade-right">
                     SMKN 5 Kiev's Discord server is the best in Indonesia! It's a vibrant community where everyone can
